<resources>
    <string name="app_name">Películas</string>
    <string name="app_list">Lista de Peliculas</string>
    <string name="app_listapi">Lista de Peliculas Ghibli</string>
    <string name="app_create">Crea una pelicula</string>
    <string name="app_detail">Detalle de la pelicula</string>
    <string name="app_login">Iniciar sesión</string>
    <string name="tv_login">Iniciar sesión</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Contraseña</string>
    <string name="tv_title">Titulo</string>
    <string name="tv_description">Descripción</string>
    <string name="tv_punctuation">Punctuacion</string>
    <string name="tv_year">Año</string>
    <string name="tv_image">Imagen</string>
    <string name="btn_login">INICIAR SESION</string>
    <string name="btn_create">CREAR</string>
    <string name="btn_delete">BORRAR</string>
    <string name="errorEmpy">Existen campos vacios</string>
    <string name="errorEmpyPunctuationCamp">La puntuacion esta vacia</string>
    <string name="errorEmpyTitle">Escribe el titulo de la pelicula</string>
    <string name="errorEmpyDescription">Escribe la descripción de la pelicula</string>
    <string name="errorEmpyYear">Escribe el año de publicación no menor a 1.878 y no mayor a 2.019</string>
    <string name="errorEmpyPunctuation">Escribe una puntuación entre 0 y 5</string>
    <string name="errorEmpyImage">Escribe la url de la imagen de la pelicula</string>
    <string name="errorEmpyEmail">Escribe el email</string>
    <string name="errorEmpyPassword">Escribe la  contraseña</string>
    <string name="errorEmpyLogin">Debes escribir un email y password</string>
    <string name="errorConnection">Error con la conexión con la ghibliapi </string>
    <string name="hintPunctuation">Escribe una puntuación entre 0 y 5</string>
    <string name="url_movie">https://www.abc.es/play/cine/peliculas/</string>
</resources>


